# src/modules/cars/entities/Specification.ts
@@ -1,12 +1,20 @@
 import { v4 as uuidV4 } from 'uuid';
+import { Column, CreateDateColumn, Entity, PrimaryColumn } from "typeorm";
 
-//criando a classe
-class Category {
+@Entity("specifications")
+class Specification{
 
     //atributos
+    @PrimaryColumn()
     id?: string;
+
+    @Column()
     name: string;
+
+    @Column()
     description: string;
+
+    @CreateDateColumn()
     created_at: Date;
 
     //construdor chamado quando a classe é instanciada
@@ -17,4 +25,4 @@ class Category {
     }
 }
 
-export { Category }
+export { Specification }
