# src/routes/categories.routes.ts
@@ -3,10 +3,9 @@ import { Router } from "express";
 import multer from "multer";
 
 //repositorio
-import { CategoriesRepository } from "../modules/cars/repositories/implementations/CategoriesRepository";
-import { createCategoryController } from "../modules/cars/useCases/createCategory";
-import { listCategoriesController} from "../modules/cars/useCases/listCategories";
-import { importCategoryController } from "../modules/cars/useCases/importCategory";
+import { CreateCategoryController } from "../modules/cars/useCases/createCategory/CreateCategoryController";
+import { ListCategoriesController } from "../modules/cars/useCases/listCategories/ListCategoriesController";
+import { ImportCategoryController } from "../modules/cars/useCases/importCategory/ImportCategoryController";
 
 //passando o metodos de rota para categoriesRoutes
 const categoriesRoutes = Router();
@@ -15,18 +14,14 @@ const upload = multer({
     dest: "./tmp",
 });
 
-const categoriesRepository = new CategoriesRepository();
+const createCategoryController = new CreateCategoryController();
+const listCategoriesController = new ListCategoriesController();
+const importCategoryController = new ImportCategoryController();
 
-categoriesRoutes.post("/", (request, response) =>{
-   return createCategoryController.handle(request, response);
-});
+categoriesRoutes.post("/", createCategoryController.handle);
 
-categoriesRoutes.get("/", (request, response) =>{    
-    return listCategoriesController.handle(request, response);
-});
+categoriesRoutes.get("/", listCategoriesController.handle);
 
-categoriesRoutes.post("/import", upload.single("file"), (request, response) =>{
-    return importCategoryController.handle(request, response);
-});
+categoriesRoutes.post("/import", upload.single("file"), importCategoryController.handle);
 
 export { categoriesRoutes };
